Fix scroller being cut off
..when on small device

--- a/ui/details.reel/details.css
+++ b/ui/details.reel/details.css
@@ -149,7 +149,7 @@
 }
 
 .scroller {
-    height: 108px;
+    height: 85px;
     color: white;
     background: hsl(0,0%,13%);
 }
