--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -106,6 +106,9 @@
     .Main-details .title:before {
         display: none;
     }
+    .scroller {
+        height: 108px;
+    }
 }
 @media (max-width: 500px) and (orientation: portrait) {
     .logo {
